--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@
 
 
 /*
+
+Josh Comeau CSS Reset
   1. Use a more-intuitive box-sizing model.
 */
 *,
@@ -105,26 +107,47 @@ body {
     font-size: 18px;
 } */
 
+h1{
+    width: 230px; 
+    /* so the hover applies to the actual text and not the blank space beside it */
+}
+
 hr{
     border:0.5px solid hsl(215, 51%, 70%);
     margin: 1rem 0;
-    
+
+    /*styling the one and only line on this page */
 }
 .NFT-card{
     background-color: var(--clr-neutral-800);
     border-radius: 1rem;
-    /*in: 2rem;*/
+    /*margin: 4rem;*/
     padding: 1.75rem;
     place-content: center;
     overflow: hidden;
     /*text-align: center;*/
     width: 377px;
     height: 625px;
+    /*position: relative;*/
 }
 
+/*.NFT-top__img:nth-of-type(1){
+    position: relative;
+    border-radius: 0.75rem;
+}*/
 
-.NFT-top__img{
-    border-radius: 0.75em;
+.NFT-top__img img{
+    border-radius: 0.75rem;
+    margin: auto;
+    position: relative;
+}
+
+.NFT-top__hover img{
+    border-radius: 0.75rem;
+    position: absolute;
+    background-color: rgba(0, 255, 247, 0.5 );
+    padding: 136.5px;
+    margin-top: -321px;
 }
 
 .NFT-description{
@@ -151,7 +174,8 @@ hr{
     /* aligning center text vertically also */
 }
 
-.avatar__img{
+.avatar__img{ 
+    /* Jules Wyvern picture */
     width: 2.5rem;
     margin: auto 1rem 0 0;
     border: 1px solid white;
@@ -159,29 +183,32 @@ hr{
 }
 
 .equilibrium{
+    /* our p text */
     line-height: 2rem;
     margin-top: 0.5rem;
-    
 }
 
 .ethereum__img{
+    /* icon next to eth */
     width: 0.8rem;
     height: 1.3rem;
     margin: 0.25rem 0.5rem 0 0;
 }
 
 .clock__img{
+    /* icon next to clock */
     width: 1.25rem;
     height: 1.25rem;
     margin: 0.25rem 0.5rem 0 0;
-   
 }
 
 .equilibrium, .creation, .clock{
+    /* all the light blue elements */
     color: var(--clr-primary-400);
 }
 
 .ethereum{
+    /* neon turquoise elements */
     color:var(--clr-secondary-300);  
     margin: 0 6.5rem 0 0;
 }
@@ -193,4 +220,29 @@ hr{
 .attribution{
     font-size: 0.75rem;
     text-align: center;
+}
+
+h1:hover, .Jules:hover, .NFT-top:hover{
+    /* changes cursor to pointer upon hover */
+    color:var(--clr-secondary-300);
+    cursor: pointer; 
+}
+
+/*.NFT-top__img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    /*border-radius: 0.75rem;
+}*/
+
+/* This makes the second image not appear at first. */
+.NFT-top__hover{
+    display: none; 
+}
+
+/* second image appears upon hover */
+.NFT-top:hover .NFT-top__hover{
+    display: inline;
+    transform: scale(1.1);
+    
 }
